--- a/modulo-2/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo-2/css-bugfixes/exercicio-bugfixes/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 h2 {
@@ -33,11 +34,11 @@ div>p:first-child {
     display: inline;
 }
 
-div img {
-    background: black;
-}
+
 
 .botao-amarelo {
+    display: inline-block;
+    text-align: center;
     background-color: #ffaf43;
     width: 250px;
     height: 40px;
@@ -48,6 +49,7 @@ div img {
 
 .botao-amarelo:hover {
     background-color: #c44f00;
+    color:white;
 }
 
 .container {
@@ -57,6 +59,7 @@ div img {
 
 .icone {
     height: 15px;
+    width: 15px;
 }
 
 
@@ -84,6 +87,8 @@ div img {
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+    display: block;
+    
 }
 
 
@@ -99,8 +104,9 @@ div:last-child {
 }
 
 table {
-    width: 60%;
+    width: 100%;
     text-align: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
 }
 
 td button {
@@ -117,7 +123,10 @@ td button {
 }
 
 
-#back-button {
+.back-button {
+    display: inline-block;
+    margin-top: 100px;
+    text-align: center;
     background-color: white;
     width: 100px;
     height: 20px;
@@ -125,8 +134,9 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+   
 }
 
-#back-button:hover {
+.back-button:hover {
     background-color: #635a3d
 }
