--- a/modulo-2/flex-grid/style.css
+++ b/modulo-2/flex-grid/style.css
@@ -1,33 +1,94 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-header{
-    background-color: mediumvioletred;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 10px;
-    justify-content: space-between;
-    height: 3vh;
+.icone {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
 }
 
-main{
-    background-color: #f2d0e0;
-    display: flex;
-    flex-direction: row;
+body {
+  max-height: 100vh;
+
+  display: grid;
+  grid-template-rows: 60px 1fr 60px;
+  grid-template-columns: 300px 1fr;
 }
 
-.menu{
-    display: flex;
-    flex-direction: column;
-    flex: 2;
+header {
+  background: mediumvioletred;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+
+  grid-column: 1/-1;
 }
 
-.icone-menu{
-        display: flex;
-        justify-content: flex-start;
-        padding: 10px;
-    }
+header .icone-texto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header button {
+  padding: 10px;
+}
+
+nav {
+  width: 200px;
+  background: pink;
+  padding: 10px;
+}
+
+nav .button {
+  display: flex;
+  margin: 7px 0;
+}
+
+nav .button div {
+  width: 100%;
+
+  display: flex;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 20px;
+  column-gap: 20px;
+}
+
+main .card .bolo {
+  width: 250px;
+}
+
+main .card {
+  box-shadow: 2px 2px 5px darkblue;
+  text-align: center;
+  width: 250px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer {
+  background: mediumvioletred;
+  height: 40px;
+  width: 100%;
+
+  position: fixed;
+  bottom: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  grid-column: 1/-1;
+}
