--- a/modulo-2/css-labetube/style.css
+++ b/modulo-2/css-labetube/style.css
@@ -3,13 +3,9 @@
   padding: 0;
 }
 
-body {
-  background-color: rgb(211, 119, 220);
-  max-height: 100vh;
-  display: grid;
-}
+/*header */
 
-header {
+.cabecalho {
   background-color: rgb(180, 113, 242);
   display: flex;
   height: 40px;
@@ -17,57 +13,55 @@ header {
   justify-content: space-evenly;
 }
 
-main {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  row-gap: 20px;
-  column-gap: 20px;
-  padding-top: 30px;
-}
-
 .busca {
   width: 60px;
   height: 30px;
 }
-
-.icone-imagem {
+/*main tela principal*/
+.main-flex {
+  max-width: 960px;
   display: flex;
-  flex-direction: column;
-  height: 200px;
-  width: 250px;
-  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 40px auto;
+}
+
+.box-card {
   box-shadow: 2px 2px 5px rgb(21, 223, 102);
   text-align: center;
+  padding-bottom: 30px;
+  margin: 8px 8px;
 }
 
 .img-capa {
   width: 250px;
-  height: 150px;
+  height: 250px;
 }
 
 footer {
   background-color: rgb(180, 113, 242);
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   height: 40px;
   width: 100%;
   justify-content: center;
   align-items: center;
   position: fixed;
   bottom: 0;
-  
+}
+/* estilização video*/
 
+.section-video {
+  max-width: 960px;
+  padding-top: 100px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-p{
-
-height: 50px;
-width: 100px;
-text-decoration: underline;
-font-size: 200%;
-
-/* position: fixed;
-bottom: 100px; */
+.video {
+  width: 50vh;
+  height: 50vh;
 }
-
