--- a/modulo-3/apis-labenusers/apis-labenusers/src/App.css
+++ b/modulo-3/apis-labenusers/apis-labenusers/src/App.css
@@ -1,43 +1,63 @@
- /* .App {
-   font-size: large;
+* {
+  padding: 0.2em;
+  background-color:#cd9dcd;
+  font-family: "Courier New", Courier, monospace;
+
+  
+}
+.cadastroDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-}  */
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 10rem;
+  padding: 150px 50px;
+  background-image: linear-gradient(to right,#81357d,#f1a3f2);
+  margin: auto;
+  border: 1px solid white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cadastroDiv input {
+  margin: 15px;
+  padding: 10px;
+  border-radius: 4px 3px 6px;
+  background-color: rgb(217, 104, 211);
+  color: white;
+  font-size: 18px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cadastroDiv button {
+  margin: 15px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: #d968d4;
+  color: white;
+  width: 10rem;
+  font-size: 18px;
+}
+
+.trocarTela {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 10px auto;
+  padding: 10px;
+  width: 20rem;
+  border-radius: 20px;
+  background-color: #d968d4;
   color: white;
+  font-size: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.listaUsuarios {
+  display: flex;
+  justify-content: center;
+  width: 20rem;
+  text-align: center;
+  font-size: 28px;
+  padding: 10px;
+  margin: auto;
+  border: 1px solid #d968d4;
+  color:white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
-} */ 
